Fix date input width on mobile.

--- a/src/styles/components/userForm.scss
+++ b/src/styles/components/userForm.scss
@@ -83,6 +83,7 @@
       border: 1px solid $border-4;
       background: $bg-10;
       padding: 10px 5px;
+      width: 100%;
       &::placeholder {
         color: $text-9;
         font-weight: 400;
